@@ -1,3 +1,8 @@
+2019-11-24  Dirk Eddelbuettel  <edd@debian.org>
+
+ 	* inst/tinytest/test_algorithm.R: Converted from RUnit to tinytest
+ 	* inst/tinytest/test_as.R: Idem
+
 2019-11-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docker/ci/Dockerfile: Add tinytest to ci Docker image
